# jerry_trader

./: .env.example  .gitignore  .markdownlint.json  .topology.json  ARCHITECTURE.md  ARCHIVE.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  alembic.ini.example  basic_config.yaml  config.yaml  config.yaml.example  config_v2.yaml  extract_logs_to_json.py  index.html  machine_config.yaml  migrate_session_id.flux  pyproject.toml
.github/workflows/: CI.yml
alembic/: README  env.py
alembic/versions/: 20251215_01_bootstrap_ibbot_persistence.py
assets/: index-BSX-ZXP5.css  index-BjyvQ1_B.js  index-CJjTZ9XE.js  index-KRUuRcn0.css  index-XjKnX2E7.js
config/: events.yaml  factors.yaml  mining.yaml
config/rules/: premarket_momentum.yaml
deploy/: jerry_trader_wsl2.service  jerry_trader_wsl2.timer
docs/: Phase_2_5_3_5.md  domain_usage_example.py  jerry_trader.tex
frontend/: .env.ghpages  .gitignore  deploy.sh  frontend_README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/GridTrader/: .env.example  .env.ghpages  BACKEND_INTEGRATION.md  README.md  deploy.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/OrderTrader/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  AppShell.tsx  index.css  main.tsx  vite-env.d.ts
notebooks/: 01-snapshot-price-vwap.ipynb  02-backtest-results.ipynb  03-delayed-trades-investigation.ipynb  04-ch-data-inspection.ipynb  05-backtest-data-readiness.ipynb
python/tests/: bench_factors.py  main.py  test_config.py  test_eventbus_migration.py  test_thetadata_manager.py
roadmap/: agent-mining-phase.md  atcr-agent-system.md  backtest-architecture.md  backtest-paradigm-analysis.md  backtest-pipeline-design.md  backtest-prefilter-findings.md  backtest-realtime-alignment.md  backtest-visualization-architecture.md  bar-backfill-observer.md  barsbuilder-rust-bootstrap.md  biaf-vs-kidz-analysis.md  big-winner-definition-and-analysis-framework.md  bootstrap-coordinator-v2.md  bootstrap-coordinator.md  bug-first-subscribe-trade-rate-gap.md  bug-resubscribe-1m-bars-not-fetched.md  bug-resubscribe-trade-rate-not-warmed.md  chartbff-http-only.md  chatbox-module.md  check-verbose.md  config-driven-mining.md  date-range-parallel.md  dense-signal-hypothesis-validation.md  dry-run-candidates-only.md  early-signal-feature-engineering.md  entry-gain-analysis.md  event-bus-architecture.md  event-framework-implementation.md  event-framework-validation.md  event-trigger-architecture.md  experiment-framework.md  factor-architecture-analysis.md  factor-behavior-design.md  factor-plugin-architecture.md  factor-realtime-analysis.md  factor-registration-v4.md  factor-stream-rust-migration.md  factor-subscription-scenarios.md  factor-timeframe-schema.md  factor-trait-design.md  (+44 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: bars.rs  clock.rs  factors.rs  lib.rs  snapshot.rs
rust/src/compute_box/: bar_builder_engine.rs  ch_writer.rs  data_layer.rs  factor_engine_core.rs  mod.rs  polygon_fetcher.rs  ws_publisher.rs
rust/src/factor/: bar_factors.rs  batch_compute.rs  data.rs  factor_trait.rs  mod.rs  py_engine.rs  quote_factors.rs  registry.rs  trade_factors.rs
rust/src/replayer/: config.rs  engine.rs  loader.rs  loader_ch.rs  mod.rs  stats.rs  types.rs
scripts/: analyze_extreme_winners.py  analyze_hard_cases.py  classifier_trace.py  data_update.sh  diagnose_root_cause.py  generate_labeling_profiles.py  generate_layer2_calibration.py  multi_date_exit_test.py  regenerate_labeled_profiles.py  tickdata_extract.py  train_ml_signal.py
sql/: clickhouse_backtest_bars.sql  clickhouse_backtest_results.sql  clickhouse_backtest_signals.sql  clickhouse_factors.sql  clickhouse_market_snapshot.sql  clickhouse_news_classifications.sql  clickhouse_ohlcv.sql  clickhouse_quotes.sql  clickhouse_signal_events.sql  clickhouse_snapshot_.sql  clickhouse_trades.sql  migrate_factors_add_timeframe.sql
src/: backend_starter.py  config.py  schema.py
tests/: test_eventbus_migration.py  test_risk_engine.py  test_thetadata_debug.py  test_thetadata_manager.py
(+587 files in other folders)
