[project]
name = "jerry_trader"
version = "0.2.0"
description = ""
authors = [
    {name = "JerryHong",email = "huntcamilla06@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ib-insync (>=0.9.86,<0.10.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "polygon-api-client (>=1.16.2,<2.0.0)",
    "fastapi (>=0.120.1,<0.121.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "influxdb-client (>=1.49.0,<2.0.0)",
    "exchange-calendars (>=4.12,<5.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "databento (>=0.68.2,<0.69.0)",
    "openai (>=2.15.0,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "protobuf (>=6.33.5,<7.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "duckdb (>=1.4.4,<2.0.0)",
]

[tool.poetry]
packages = [{include = "*", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.1"
commitizen = "^4.9.1"
black = "^25.12.0"
isort = "^7.0.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
