[package]
name = "jerry_trader"
version = "0.1.0"
edition = "2024"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"

# Async runtime (for TickDataReplayer replay loop)
tokio = { version = "1.35", features = ["full"] }

# Data processing — Parquet reading
polars = { version = "0.43", features = ["parquet", "lazy", "dtype-datetime", "is_in", "partition_by"] }

# Date and time handling
chrono = "0.4"
chrono-tz = "0.10"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Parallel iteration
rayon = "1.10"

# ClickHouse client (primary data source for replayer, fallback to Parquet)
clickhouse = "0.13"
serde = { version = "1", features = ["derive"] }
